Load config from user home dir